--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,14 @@
   "name": "mw-frontend-checklist",
   "version": "0.0.0",
   "dependencies": {
-    "normalize-scss": "~2.1.2"
-  }
+    "normalize-scss": "~2.1.2",
+    "jquery": "~2.0.3"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
