added more content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: MW front-end checklist
+name: MW front-end checklist and resources
 id: mw-frontend-checklist
 pygments: true
 markdown: rdiscount
